--- a/usos_agua.Rmd
+++ b/usos_agua.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning =FALSE)
 library(here)
 library(readxl)
 library(tidyverse)
-library(sf)
+library(geouy)
 library(xtable)
 ```
 
@@ -24,57 +24,111 @@ Dentro de este estudio, nos planteamos responder a preguntas fundamentales, tale
 2. ¿Qué sectores de la actividad requieren mayores volúmenes de agua?
 3. ¿Qué zonas del país presentan mayores demanda de uso?
 
+Para abordar estas preguntas, realizaremos un análisis de los datos disponibles utilizando las diversas herramientas que proporciona R para el análisis de datos. Buscaremos utilizar y dar visibilidad a la biblioteca Geouy, que facilita el manejo de datos geograficos relacionados con Uruguay de manera sencilla.
+Además, crearemos una aplicación utilizando la biblioteca Shiny, que permitirá visualizar de forma interactiva los resultados obtenidos en el informe. 
+Por último, crearemos un modelo predictivo con el objetivo de predecir el uso del agua utilizando diversas variables de respuesta presentes en los datos. 
+
 # Datos
 
-Como se mencionó, los datos utilizados pertenecen a la Dirección Nacional del Agua. Estos datos comprenden el registro de todas las empresas que realizan extracciones de agua para diversos usos productivos. El registro abarca un total de 3441 empresas, tanto públicas como privadas. Si bien los datos disponibles corresponden al año 2019, la gran mayoría de los registros aún se encuentran vigentes hasta la fecha actual.
+```{r}
+datos <- read_csv2(here("Datos","aprovechamientos_2023.csv"))
+datos_19 <- read_csv2(here("Datos","aprovechamientos_2019.csv"))
 
-Entre los datos, se incluyen variables de interés, tales como:
+datos_l <- datos %>%
+           select(-"Regional",-"Estado",-"Tipo Solicitud",-"Fecha Solicitud",-"Fecha Resolución",-"Fecha Inscripción",
+                  -"Fecha Vencimiento",-"produccion",-"Inicio",-"Fin") %>%
+           rename("cod_reg"= "nro_gex","nom_reg"= "Nombre","dpto"= "departamento",
+                  "vol_anual"="Volumen Anual (m3)","tipo_ext"="Categoría","mes_anio"="Meses/Año") %>%
+           rename_all(tolower) %>%
+           mutate(dpto =factor(dpto),uso =factor(uso),destino =factor(destino),
+                  codcuenca=factor(codcuenca)) %>%
+           mutate(codcuenca_nv1=factor(substr(codcuenca, 1, 1))) %>%
+           mutate(tipo_ext = str_to_title(tipo_ext),nom_reg=toupper(nom_reg)) %>%
+           mutate(tipo_ext = case_when(tipo_ext == "Pozoestudio" ~ "Pozo",.default=tipo_ext)) %>%
+           mutate(tipo_ext = factor(tipo_ext))
 
-1. Tipo de Obra: Se refiere al tipo de estructura utilizada para la extracción del agua, que puede ser a través de represas, tomas directas en ríos o pozos, entre otras opciones comunes.
+datos_coord <- datos_19 %>%
+               filter(Lat < 0) %>%
+               rename("cod_reg"="Nro. GEX","lat"="Lat","lon"="Lon") %>%
+               select(cod_reg,lat,lon)
 
-2. Volumen Anual: Indica el volumen máximo de agua permitido para la extracción. Este valor depende en parte, por el tipo de obra utilizada para la extracción.
+datos_l <- left_join(datos_l,datos_coord,by="cod_reg")
+```
 
-3. Uso: Hace referencia al propósito o destino que se le dará al agua. Los usos se clasifican en consumo humano, uso industrial, riego, otros usos agropecuarios y otros usos adicionales (turismo y recreación, control de incendios, comercio y servicios).
+Como se mencionó, los datos utilizados pertenecen a la Dirección Nacional del Agua. Estos datos comprenden el registro de todas las empresas y entes publicos que realizan extracciones de agua para diversos usos productivos o abastecimiento a la poblacion. Los datos abarca un total de 5405 registros que se encuentran actualmente habilitados a la explotacion de recursos hidricos. 
 
-4. Destino: Detalla el lugar o fin específico donde se utilizará el agua, por ejemplo, en el caso del riego, se especifica el tipo de cultivo.
-
-5. Ubicación: Proporciona las coordenadas (latitud y longitud) donde se encuentra la estructura de extracción.
-
-6. Cuencas: Permite identificar la cuenca hidrográfica de la cual se está realizando la extracción. Una cuenca se refiere a toda el área de terreno que contribuye al flujo de agua en un río.
-
+Las principales variables de interes a analizar de los datos son:
 
 ```{r,echo=FALSE}
-datos <- read_csv2(here("Datos","aprovechamientos-2019.csv"))
+t_datos <- tibble("Nombre Variable" = names(datos_l),
+                  "Descripción" = c("Refiere al codigo identificador de la solicitud de extraccion frente a la DINAGUA.",
+                                   "Nombre de la empresa, ente o persona registrada.", 
+                                   "Departamento donde se encuentra la obra de extracción", 
+                                   "Hace referencia al propósito o destino que se le dará al agua. Los usos se clasifican en consumo humano, uso industrial, riego, otros usos agropecuarios y otros usos adicionales (turismo y recreación, control de incendios, comercio y servicios).", 
+                                   "Detalla el lugar o fin específico donde se utilizará el agua, por ejemplo, en el caso del riego, se especifica el tipo de cultivo.", 
+                                   "Indica el volumen máximo de agua permitido para la extracción. Este valor depende en parte, por el tipo de obra utilizada para la extracción.", 
+                                   "Se refiere al tipo de estructura utilizada para la extracción del agua, que puede ser a través de represas, tomas directas en ríos o pozos, entre otras opciones comunes.", 
+                                   "detallescuenca", 
+                                   "Permite identificar la cuenca hidrográfica de nivel 2  a la cual se está realizando la extracción.", 
+                                   "Permite identificar la cuenca hidrográfica de nivel 1 a la cual se está realizando la extracción.", 
+                                   "Coordenadas de latitud de la obra de extraccion", 
+                                   "Coordenadas de longitud de la obra de extraccion"))
+meta_datos <- xtable(t_datos,include.rownames = FALSE)
+```
 
-datos.c <- datos %>%
-           filter(Estado == "Registrada") %>%
-           select("Tipo de Obra","Volumen","Uso","Destino",
-                  "Lat","Lon","Mes Inicio","Mes Final","Horas x Año",
-                  "Depto.-Padrón","Fecha de Inscripción","Fecha Vencimiento","c_1","c_2") %>%
-           rename("t_obra"= "Tipo de Obra","v_anual"= "Volumen",
-                  "dest"= "Destino","m_ini" = "Mes Inicio","uso"="Uso",
-                  "m_fin" = "Mes Final","h_anio" = "Horas x Año","cuenca_1"="c_1","cuenca_2"="c_2",
-                  "dpto" = "Depto.-Padrón","f_ins"="Fecha de Inscripción","f_venc"="Fecha Vencimiento") %>%
-           mutate(t_obra =factor(t_obra),uso =factor(uso),
-                  dest =factor(dest), dpto = dpto,dpto = factor(gsub("-.*", "", dpto)),
-                  f_ins=as.Date(f_ins,format="%d/%m/%Y"),f_venc=as.Date(f_venc,format="%d/%m/%Y")) %>%
-           mutate(dur_perm = f_venc-f_ins)
-
+```{r, echo=FALSE, results='asis'}
+print(meta_datos,size = "\\footnotesize",comment=FALSE)
 ```
 
 ```{r}
-mapa_dpto <- st_read(here("Mapa","limdpto.shp.zip")) %>% 
-             mutate(depto=iconv(depto, from = "ISO-8859-1", to = "UTF-8"))
+map_c <- load_geouy("Cuencas hidro N2") %>%
+         mutate(nombrec2=iconv(nombrec2, from = "ISO-8859-1", to = "UTF-8"),
+         popup=iconv(popup, from = "ISO-8859-1", to = "UTF-8"),codcuenca=factor(codcuenca))
 
-mapa_cuenca_1 <- st_read(here("Mapa","cuencas_1.shp.zip")) %>% 
-                 mutate(nam=iconv(nam, from = "ISO-8859-1", to = "UTF-8"),
-                 tipo_objet=iconv(tipo_objet, from = "ISO-8859-1", to = "UTF-8")) %>%
-                 rename("cuenca_1"="nam")
+uso_c <- datos_l %>%
+         group_by(codcuenca,uso) %>%
+         summarise(n_uso=n()) %>%
+         slice_max(order_by = n_uso, n = 1) 
 
-mapa_cuenca_2 <- st_read(here("Mapa","cuencas_2.shp.zip")) %>% 
-                 mutate(nam=iconv(nam, from = "ISO-8859-1", to = "UTF-8"),
-                 tipo_objet=iconv(tipo_objet, from = "ISO-8859-1", to = "UTF-8"))  %>%
-                 rename("cuenca_2"="nam")
+reg_c <- datos_l %>%
+         group_by(codcuenca) %>%
+         summarise(n_reg=n())
+
+destagr_c <- datos_l %>%
+             filter(uso %in% c("Riego","Otros usos agropecuarios")) %>%
+             group_by(codcuenca,destino) %>%
+             summarise(n_dest_agro=n()) %>%
+             rename("dest_agro"="destino") %>%
+             slice_max(order_by = n_dest_agro, n = 1) 
+              
+vol_c <- datos_l %>% 
+         group_by(codcuenca) %>%
+         summarise(vol_anual = sum(vol_anual))
+
+datos_c <- left_join(map_c, uso_c, by = "codcuenca") %>% 
+           left_join(destagr_c, by = "codcuenca") %>%
+           left_join(reg_c, by = "codcuenca") %>%
+           left_join(vol_c, by = "codcuenca")
+```
+
+
+## Cuencas hidrograficas catalogadas por uso mayoritario
+
+```{r}
+plotm_uso <- ggplot() + geom_sf(data=datos_c,aes(fill=uso))
+plotm_uso
+```
+
+
+```{r}
+plotm_destagr <- ggplot() + geom_sf(data=datos_c,aes(fill=dest_agro))
+plotm_destagr
+```
+
+
+```{r}
+plotm_vol <- ggplot() + geom_sf(data=datos_c,aes(fill=vol_anual)) + scale_fill_viridis_c(name="Volumen anual disponible (m3)",end = 0.9)
+plotm_vol
 ```
 
 # Principales usos 
@@ -82,8 +136,7 @@ mapa_cuenca_2 <- st_read(here("Mapa","cuencas_2.shp.zip")) %>%
 ## Numero de registros por uso
 
 ```{r,echo=FALSE}
-#Registros por uso
-reg_uso <- datos.c %>%
+reg_uso <- datos_l %>%
            group_by(uso) %>%
            ggplot() + geom_bar(aes(x=fct_infreq(uso),fill=uso)) + 
            scale_y_continuous(name="Cantidad de registros por uso") + scale_x_discrete(name="Usos") + coord_flip() +                         theme(legend.position = "none")
@@ -92,48 +145,15 @@ reg_uso <- datos.c %>%
 ```{r}
 reg_uso
 ```
-## Cuencas hidrograficas catalogadas por uso mayoritario
-
-```{r,echo=FALSE}
-#Principal uso por cuenca
-uso_cuenca <- datos.c %>%
-              filter(!is.na(cuenca_2)) %>%
-              group_by(cuenca_2,uso) %>%
-              summarise(n_reg=n()) %>%
-              slice_max(order_by = n_reg, n = 1) %>%
-              slice(1) 
-
-mapa_cuenca_2 <- left_join(mapa_cuenca_2,uso_cuenca,by="cuenca_2")
-  
-p_uso_cuenca <- ggplot() + geom_sf(data=mapa_cuenca_2,aes(fill=uso)) + theme_minimal()
-```
-
-```{r, fig.cap="Mayor uso por cuenca hidrografica"}
-p_uso_cuenca
-```
-## Distribucion en el mapa de las distintas obras por usos
-
-```{r,echo=FALSE}
-p_point_emp <- datos.c %>%
-               filter(Lat < 0, uso %in% c("Riego","Consumo humano","Industrial","Otros usos agropecuarios")) %>%
-               select(Lat,Lon,uso) %>%
-               ggplot() + geom_sf(data=mapa_dpto) + 
-               geom_point(aes(x = Lon, y = Lat,color=uso), size = 1.5, alpha = 0.8) + facet_wrap(~uso,ncol = 2) + theme(legend.position = "none",axis.text = element_blank(),axis.ticks = element_blank(),axis.title = element_blank())
-```
-
-```{r,echo=FALSE}
-p_point_emp
-```
 # Riego
 
 ## Cantidad de registros por cultivo
 
 ```{r,echo=FALSE}
-#Registros por uso
-reg_cult <- datos.c %>%
-           filter(uso == "Riego") %>%
-           group_by(dest) %>%
-           ggplot() + geom_bar(aes(x=fct_infreq(dest),fill=dest)) + 
+reg_cult <- datos_l %>%
+           filter(uso == "Riego",!destino %in% c("Sistema de riego","Otros")) %>%
+           group_by(destino) %>%
+           ggplot() + geom_bar(aes(x=fct_infreq(destino),fill=destino)) + 
            scale_y_continuous(name="Cantidad de registros por cultivo") + scale_x_discrete(name="Cultivo") + coord_flip() +                         theme(legend.position = "none")
 ```
 
@@ -143,32 +163,17 @@ reg_cult
 ## Volumenes anuales por cultivo
 
 ```{r,echo=FALSE}
-#Registros por uso
-vol_cult <- datos.c %>%
-           filter(uso == "Riego") %>%
-           group_by(dest) %>%
-           summarise(vol = sum(v_anual)) %>%
-           ggplot() + geom_bar(aes(x=reorder(dest,vol),y=vol,fill=dest),stat="identity") + 
+vol_cult <- datos_l %>%
+           filter(uso == "Riego",!destino %in% c("Sistema de riego","Otros")) %>%
+           group_by(destino) %>%
+           summarise(vol = sum(vol_anual)) %>%
+           ggplot() + geom_bar(aes(x=reorder(destino,vol,decreasing = TRUE),y=vol,fill=destino),stat="identity") + 
            scale_y_continuous(name="Volumen anual disponible por cultivo (m3)") + scale_x_discrete(name="Cultivo") + coord_flip() + theme(legend.position = "none")
 ```
 
 ```{r,echo=FALSE}
 vol_cult
 ```
-# Volumen anual disponible para la extraccion por cuenca 
 
-```{r,echo=FALSE}
-#Volumen anual disponible por cuenca
-vol_cuenca <- datos.c %>%
-              filter(!is.na(cuenca_2)) %>%
-              group_by(cuenca_2) %>%
-              summarise(v_anu=sum(v_anual))
-              
-mapa_cuenca_2 <- left_join(mapa_cuenca_2,vol_cuenca,by="cuenca_2")
 
-p_vol_cuenca <- ggplot() + geom_sf(data=mapa_cuenca_2,aes(fill=v_anu)) + scale_fill_viridis_c(name="Volumen anual disponible (m3)") 
-```
 
-```{r, fig.cap="Volumen anual disponible para extraer por cuenca hidrografica"}
-p_vol_cuenca
-```
