--- a/usos_agua.Rmd
+++ b/usos_agua.Rmd
@@ -126,7 +126,10 @@ datos_cuenca <- left_join(mapa, reg_cuenca, by = "codcuenca") %>%
                 left_join(vol_cuenca, by = "codcuenca")
 ```
 
+\newpage 
 ## Cantidad de registros por uso
+
+El siguiente gráfico muestra la cantidad total de solicitudes de extracción agrupadas por el Uso de la misma. 
 
 ```{r,echo=FALSE}
 reg_uso <- datos_l %>%
@@ -143,7 +146,10 @@ reg_uso <- datos_l %>%
 reg_uso
 ```
 
+\newpage 
 ## Volumen total por uso
+
+De forma análoga al gráfico anterio, el siguiente muestra el volumen total autorizado agrupados por Uso.
 
 ```{r}
 Volumen_total_uso <- datos_l %>%
@@ -161,9 +167,12 @@ plot_vol_uso <- ggplot(Volumen_total_uso,
 
 plot_vol_uso
 ```
+**En los dos gráficos anteriores puede visualizarse cómo el Riego es el uso que posee tanto mayor cantidad de solicitudes, como de volumen autorizado para extraer.**
 
-
+\newpage 
 ## Cuencas hidrograficas catalogadas por uso mayoritario
+
+El siguiente gráfico nos muestra, para cada cuenca de nivel 2, cuál es el Uso con mayor volumen autorizado. Una vez más, Riego es el que encabeza el listado para la mayoría de las cuencas. 
 
 ```{r}
 plotm_uso <- ggplot() + geom_sf(data=datos_cuenca,aes(fill=uso)) + 
@@ -175,7 +184,10 @@ plotm_uso <- ggplot() + geom_sf(data=datos_cuenca,aes(fill=uso)) +
 plotm_uso
 ```
 
+\newpage 
 ## Cuencas hidrográficas catalogadas por destino mayoritario y volumen anual disponible
+
+Aquí podemos ver cuál es el desino con mayor volumen para cada cuenca nivel 2. Además también se muestra el rango en el que se encuentra el volumen total para todos los usos y destinos.
 
 ```{r}
 plotm_dest <- ggplot(data = datos_cuenca) +
@@ -190,7 +202,11 @@ plotm_dest <- ggplot(data = datos_cuenca) +
 # Mapa fraccionado por cuencas nivel 2, reflejando el destino que tiene el mayor volumen máximo de agua autorizado para cada cuenca, y el volumen total según el máximo uso
 plotm_dest
 ```
+En el gráfico puede observarse cómo en la mayoría de las cuencas, el destino con mayores volúmenes de agua consumidos es el Arroz, seguido por "Cereales/Oleaginosas".
+
+\newpage 
 ## Cuencas hidrograficas catalogadas por volumen anual disponible
+El siguiente mapa muestra el volumen anual total autorizado para cada una de las cuencas:
 
 ```{r}
 plotm_vol <- ggplot() + geom_sf(data=datos_cuenca,aes(fill=vol_anual)) + scale_fill_viridis_c(name="Volumen Anual(millones de m3)")  +
@@ -202,9 +218,11 @@ plotm_vol <- ggplot() + geom_sf(data=datos_cuenca,aes(fill=vol_anual)) + scale_f
 plotm_vol
 ```
 
+\newpage 
 ## Volumen anual permitido distribuido por uso 
+El siguiente esquema muestra como se desagrega el volumen total autorizado según su uso, y según cada destino dentro de cada Uso.
 
-```{r,echo=FALSE,eval=FALSE}
+```{r, echo=FALSE}
 library(networkD3)
 
 # Suma total de volumen por uso
@@ -243,15 +261,15 @@ sankey_vol <- sankeyNetwork(Links = links_sankey, Nodes = nodos_sankey,
 sankey_vol
 ```
 
-
+\newpage 
 # MODELOS 
 
 Se construye un modelo para determinar el Uso que tendrá la soliciud. Para ésto agrupamos los usos "Otros Usos", "Otros Usos Agropecuarios" y "Usos no consuntivos" en uno, quedando la clasificación de la siguiente forma:
 
-  - Riego
-  - Consumo humano
-  - Industrial
-  - Otros
+* Riego
+* Consumo humano
+* Industrial
+* Otros
 
 ```{r}
 library(rpart)
@@ -274,6 +292,8 @@ datos_test <- setdiff(datos_mod, datos_training)
 
 ## Arbol 
 
+**Resultados primer Árbol construido:**
+
 ```{r}
 # Usamos rpart para estimar el árbol
 arbol_1 <- rpart(formula = uso ~ dpto + vol_anual + tipo_ext + dias_permiso + codcuenca_nv1, data = datos_training)
@@ -289,6 +309,11 @@ prediccion_1 <- predict(arbol_1, newdata = datos_test, type = "class")
 confusionMatrix(prediccion_1, datos_test[["uso"]])
 ```
 
+## Arbol 2 - tratando el desbalance
+
+**Debido a que nuestros datos se encuentran desbalanceados, realizamos un segundo árbol en el cual intentamos trabajar dicho desbalance**
+
+Tabla de proporción de Usos según la cantidad de registros:
 ```{r}
 #Vamos a tratar el desbalance
 
@@ -319,9 +344,11 @@ prediccion_2 <- predict(arbol_2, newdata = datos_test, type = "class")
 confusionMatrix(prediccion_2, datos_test[["uso"]])
 ```
 
-No se observa una mejor performance, por lo que vamos a probar con un Random Forest
 
+\newpage 
 ## Random Forest
+
+**Probamos mejorar nuestro Accuracy con un Random Forest, obteniendo los siguientes resultados:**
 
 ```{r}
 rf_1 <- randomForest(uso ~ codcuenca + vol_anual + tipo_ext + dias_permiso + codcuenca_nv1, data= datos_training, ntree = 150)
